--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,10 +6,6 @@
 trigger: none
 pool:
   vmImage: ubuntu-latest
-variables:
-  ServiceConnectionName: MyServiceConnection
-  EnvironmentType: Test
-  ResourceGroupName: MyResourceGroup
 jobs:
 - job: 
   steps:
@@ -20,6 +16,7 @@ jobs:
       scriptLocation: inlineScript
       inlineScript: >-
         az deployment group create \
+          --name $(Build.BuildNumber) \
           --resource-group $(ResourceGroupName) \
           --template-file deploy/main.bicep \
-          --parameters environmentType=$(EnvironmentType)
+          --parameters environmentType=$(EnvironmentType) deployToyManualsStorageAccount=$(DeployToyManualsStorageAccount)
